unpackaged/main/default/objects/pse__Revenue_Forecast_Type__c/fields/psa_Weighted_Scheduled_Revenue__c.field-meta.xml
<CustomField>
    <fullName>psa_Weighted_Scheduled_Revenue__c</fullName>
    <formula>pse__Corp_Scheduled_Revenue__c *  pse__Project__r.Probability__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted: Scheduled Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>