unpackaged/main/default/objects/pse__Revenue_Forecast_Type__c/fields/pse__Corp_Actuals__c.field-meta.xml
<CustomField>
    <fullName>pse__Corp_Actuals__c</fullName>
    <description>Contains the combined value of the Corp: Revenue Recognized to Date and the Corp: Revenue Pending Recognition fields.</description>
    <formula>pse__Corp_Revenue_Recognized_To_Date__c + pse__Corp_Revenue_Pending_Recognition__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contains the combined value of the Corp: Revenue Recognized to Date and the Corp: Revenue Pending Recognition fields.</inlineHelpText>
    <label>Corp: Actuals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>