unpackaged/main/default/objects/pse__Revenue_Forecast_Type__c/fields/pse__Corp_Revenue_Recognized_To_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Corp_Revenue_Recognized_To_Date__c</fullName>
    <defaultValue>0</defaultValue>
    <description>In the corporate currency, the revenue that has already been recognized on this revenue forecast.</description>
    <inlineHelpText>In the corporate currency, the revenue that has already been recognized on this revenue forecast.</inlineHelpText>
    <label>Corp: Revenue Recognized to Date</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>