unpackaged/main/default/objects/pse__Revenue_Forecast_Type__c/fields/pse__Corp_Scheduled_Revenue__c.field-meta.xml
<CustomField>
    <fullName>pse__Corp_Scheduled_Revenue__c</fullName>
    <defaultValue>0</defaultValue>
    <description>In the corporate currency, the revenue that is scheduled for recognition on this revenue forecast.</description>
    <inlineHelpText>In the corporate currency, the revenue that is scheduled for recognition on this revenue forecast.</inlineHelpText>
    <label>Corp: Scheduled Revenue</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>