unpackaged/main/default/objects/pse__Revenue_Forecast_Type__c/fields/pse__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>pse__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the opportunity this revenue forecast type relates to.</description>
    <inlineHelpText>Lookup to the opportunity this revenue forecast type relates to.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Revenue Forecast Types</relationshipLabel>
    <relationshipName>Revenue_Forecast_Types</relationshipName>
    <type>Lookup</type>
</CustomField>