unpackaged/main/default/objects/pse__Revenue_Forecast_Type__c/fields/pse__Project__c.field-meta.xml
<CustomField>
    <fullName>pse__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the project this revenue forecast type relates to.</description>
    <inlineHelpText>Lookup to the project this revenue forecast type relates to.</inlineHelpText>
    <label>Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Revenue Forecast Types</relationshipLabel>
    <relationshipName>Revenue_Forecast_Types</relationshipName>
    <type>Lookup</type>
</CustomField>