unpackaged/main/default/objects/pse__Revenue_Forecast_Type__c/fields/pse__Revenue_Recognized_To_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Revenue_Recognized_To_Date__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The revenue that has already been recognized on this revenue forecast.</description>
    <inlineHelpText>The revenue that has already been recognized on this revenue forecast.</inlineHelpText>
    <label>Revenue Recognized to Date</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>