unpackaged/main/default/objects/pse__Revenue_Forecast_Type__c/fields/pse__Revenue_Source__c.field-meta.xml
<CustomField>
    <fullName>pse__Revenue_Source__c</fullName>
    <description>Indicates the source of the revenue for this record.</description>
    <inlineHelpText>Indicates the source of the revenue for this record.</inlineHelpText>
    <label>Revenue Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deliverable: Milestone</fullName>
            </value>
            <value>
                <fullName>Deliverable: Expense</fullName>
            </value>
            <value>
                <fullName>Deliverable: Timecard</fullName>
            </value>
            <value>
                <fullName>Deliverable: Miscellaneous Adjustment</fullName>
            </value>
            <value>
                <fullName>Deliverable: EVA</fullName>
            </value>
            <value>
                <fullName>% Complete: Project</fullName>
            </value>
            <value>
                <fullName>% Complete: Milestone</fullName>
            </value>
            <value>
                <fullName>Equal Split: Project</fullName>
            </value>
            <value>
                <fullName>Equal Split: Milestone</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>