unpackaged/main/default/objects/pse__Revenue_Forecast_Type__c/fields/pse__Revenue_Type__c.field-meta.xml
<CustomField>
    <fullName>pse__Revenue_Type__c</fullName>
    <description>Indicates whether the values in this record apply to actual or forecast revenue.</description>
    <inlineHelpText>Indicates whether the values in this record apply to actual or forecast revenue.</inlineHelpText>
    <label>Revenue Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Actuals</fullName>
            </value>
            <value>
                <fullName>Forecast</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>